Share status (#33)
* Squashed commit of the following:

commit 2c4cd8b151ddd883daf123576085f18a3953aae1
Author: ZiyueWang675 <ziyue_wang@ucsb.edu>
Date:   Sun Oct 1 20:59:41 2023 -0700

    add getUserStatus in swagger.json

commit 5db19ea2c4881b3b842694b84f5696a191a8b8d3
Merge: 7f8f8ce d70cef2
Author: ZiyueWang675 <ziyue_wang@ucsb.edu>
Date:   Sun Oct 1 20:52:41 2023 -0700

    Merge branch 'main' of https://github.com/cmusv-fse/18652-fse-f23-group-project-sb-1 into esn_directory

commit 7f8f8ced65a73364e87d49e9de8ced3e734ad62f
Author: ZiyueWang675 <ziyue_wang@ucsb.edu>
Date:   Sun Oct 1 20:01:44 2023 -0700

    fortget to commit frontend

commit 51cfa2257f11d9526bda8ed9ed19819cea1c4603
Author: ZiyueWang675 <ziyue_wang@ucsb.edu>
Date:   Sun Oct 1 19:25:55 2023 -0700

    create constant for status

commit 7e18644a11a5be90a9085b89ca5a1992da92b39d
Author: ZiyueWang675 <ziyue_wang@ucsb.edu>
Date:   Sun Oct 1 17:03:10 2023 -0700

    tests passed

commit e328a65927d67b64eb55b2ce1a240236504f5bd1
Author: ZiyueWang675 <ziyue_wang@ucsb.edu>
Date:   Sun Oct 1 12:28:27 2023 -0700

    remove package.json package.lock.json on root directory

commit fe1039b40bd49d85198c3b9cc3cad08e8bf0ab37
Author: ZiyueWang675 <ziyue_wang@ucsb.edu>
Date:   Sun Oct 1 02:01:41 2023 -0700

    Auth Tests fixed

commit 9fce9c660336be3edd1dbf53f73e6a585b499cb4
Author: ZiyueWang675 <ziyue_wang@ucsb.edu>
Date:   Sun Oct 1 01:56:21 2023 -0700

    Tests all failed, need help

commit 256e8ab47c1c24cbc7364150f5eb74a3b971c8d1
Author: ZiyueWang675 <ziyue_wang@ucsb.edu>
Date:   Sun Oct 1 01:52:51 2023 -0700

    Tests Modified

commit 505897e705e0a9c2a155d3c7f805de17483118fb
Author: ZiyueWang675 <ziyue_wang@ucsb.edu>
Date:   Sun Oct 1 01:38:57 2023 -0700

    I wrote in the wrong pull request template

commit 4cb1fa3efff5dfba14dfbaa1f789e884bc96b77e
Author: ZiyueWang675 <ziyue_wang@ucsb.edu>
Date:   Sun Oct 1 01:37:23 2023 -0700

    ESN Di
