# Backend/src/user/user.controller.ts
@@ -1,3 +1,4 @@
+import { notFoundException } from "../util/exceptionHandler";
 import UserDAO from "./user.dao";
 import { ESNUser } from "./user.entity";
 
@@ -16,15 +17,47 @@ export default class UserController {
 
     return allUsers;
   }
+
+  async updateUserStatus(
+    username: string,
+    lastStatus: string
+  ): Promise<ESNUser> {
+    let user: ESNUser | null = new ESNUser();
+    await this.userDao
+      .updateESNUserStatus(username, lastStatus)
+      .then((response) => (user = response));
+    if (!user) {
+      throw new notFoundException("User not exists!");
+    }
+
+    return user;
+  }
+
+  async getUserStatusByUsername(username: string): Promise<string> {
+    let status: string | null = "";
+
+    await this.userDao
+      .getUserStatus(username)
+      .then((response) => (status = response));
+    if (!status) {
+      throw new notFoundException("User not exists!");
+    }
+    return status;
+  }
+
   async updateUserOnlineStatus(
     username: string,
     isOnline: string
   ): Promise<ESNUser> {
-    let user: ESNUser = new ESNUser();
+    let user: ESNUser | null = new ESNUser();
 
     await this.userDao
       .updateUserOnlineStatus(username, isOnline === "true" ? true : false)
       .then((response) => (user = response));
+
+    if (!user) {
+      throw new notFoundException("User not exists!");
+    }
 
     return user;
   }
