# Backend/src/user/user.router.ts
@@ -1,5 +1,7 @@
 import UserController from "./user.controller";
 import express, { Request, Response, Router } from "express";
+import { ESNUser } from "./user.entity";
+import { lastStatusResponse } from "../types/types";
 
 export default class UserRouter {
   private router: Router;
@@ -13,18 +15,45 @@ export default class UserRouter {
 
   private init(): void {
     this.router.get("/status", async (_: Request, response: Response) => {
-      const users = await this.userController.getAllUserStatus();
+      const users: ESNUser[] = await this.userController.getAllUserStatus();
       response.send(users);
     });
-    this.router.put("/onlinestatus", async (request: Request, response: Response) => {
-      const username = request.body.username;
-      const isOnline = request.body.isOnline;
-      const user = await this.userController.updateUserOnlineStatus(
+
+    this.router.get(
+      "/:username/status",
+      async (request: Request, response: Response) => {
+        const username: string = request.params.username;
+        const lastStatus: string =
+          await this.userController.getUserStatusByUsername(username);
+        const status: lastStatusResponse = {
+          lastStatus: lastStatus,
+        };
+        response.send(status);
+      }
+    );
+
+    this.router.put("/status", async (request: Request, response: Response) => {
+      const username: string = request.body.username;
+      const lastStatus: string = request.body.lastStatus;
+      const user = await this.userController.updateUserStatus(
         username,
-        isOnline
+        lastStatus
       );
       response.send(user);
     });
+
+    this.router.put(
+      "/onlinestatus",
+      async (request: Request, response: Response) => {
+        const username: string = request.body.username;
+        const isOnline: string = request.body.isOnline;
+        const user: ESNUser = await this.userController.updateUserOnlineStatus(
+          username,
+          isOnline
+        );
+        response.send(user);
+      }
+    );
   }
 
   getRouter(): Router {
